# pdf-summarizer-bot

./: bot.py  pyproject.toml
